--- a/snake-client/index.html
+++ b/snake-client/index.html
@@ -58,6 +58,8 @@
 <script src="js/app.js"></script>
 <div id="game-view">
   <div id="grid" style="display: grid; width: 400px;"></div>
+  <label for="turn">Turn: </label>
+  <div id="turn" style="display: grid; width: 400px;"></div>
 </div>
 
 <script>
@@ -65,6 +67,8 @@
     try {
       const response = await fetch('http://localhost:8080/game/start');
       const data = await response.json();
+
+      document.getElementById('turn').innerText = data.turn;
 
       const width = data.grid.width;
       const height = data.grid.height;
