--- a/snake-client/index.html
+++ b/snake-client/index.html
@@ -36,8 +36,8 @@
     }
 
     .game-menu-form {
-      display: flex;
-      flex-direction: column;
+      /*display: flex;*/
+      /*flex-direction: column;*/
       gap: 1rem;
       padding: 2rem;
       background: white;
@@ -104,25 +104,65 @@
       background-color: darkred;
     }
   </style>
+
+  <style>
+    h1 {
+      color: #333;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    #active-sessions {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .active-session {
+      background: white;
+      padding: 15px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .active-session:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
+    }
+  </style>
 </head>
 
 <body>
 <script src="js/app.js"></script>
 
-<div id="viewport">
+<div id="viewport" style="display: flex; justify-content: space-between;gap: 300px;">
+  <div id="active-games-view" style="display: flex; flex-direction: column">
+    <h1>Active Games</h1>
+    <div id="active-sessions">
+      <div class="active-session">game-1</div>
+      <div class="active-session">game-2</div>
+      <div class="active-session">game-3</div>
+    </div>
+  </div>
+
   <div id="game-menu-view" class="game-menu-form">
-    <p id="title">Snake Game</p>
-    <label for="grid-size">Grid Size:</label>
-    <select id="grid-size">
-      <option value="10x10">10x10</option>
-      <option value="15x15">15x15</option>
-      <option value="20x20">20x20</option>
-    </select>
+    <div id="new-game-menu" style="display: flex; flex-direction: column">
+      <p id="title">New Game</p>
+      <label for="grid-size">Grid Size:</label>
+      <select id="grid-size">
+        <option value="10x10">10x10</option>
+        <option value="15x15">15x15</option>
+        <option value="20x20">20x20</option>
+      </select>
 
-    <label for="turn-rate">Turn Rate (ms):</label>
-    <input type="number" id="turn-rate" value="1000" min="100" step="100"/>
+      <label for="turn-rate">Turn Rate (ms):</label>
+      <input type="number" id="turn-rate" value="1000" min="100" step="100"/>
 
-    <button id="start-button">Start</button>
+      <button id="start-button">Start</button>
+    </div>
   </div>
 
   <div id="game-session-view" style="display: none">
@@ -209,9 +249,19 @@
     console.log("WebSocket connection opened");
   };
 
-  socket.onmessage = (event) => {
+  socket.onmessage = processEvent;
+
+  function processEvent(event) {
+    if (event.data.type === 'active-sessions-response') {
+      renderActiveSessions(event.data)
+    }
+
     console.log("Message from server:", event.data);
-  };
+  }
+
+  function renderActiveSessions(data) {
+    console.log(data);
+  }
 
   socket.onerror = (error) => {
     console.error("WebSocket error:", error);
