Use reactive websockets from WebFlux

--- a/snake-client/index.html
+++ b/snake-client/index.html
@@ -243,29 +243,49 @@
 </script>
 
 <script>
-  // WebSocket initialization
-  const socket = new WebSocket("ws://localhost:8080/ws");
-  socket.onopen = () => {
-    console.log("WebSocket connection opened");
-  };
+  let socket;
 
-  socket.onmessage = processEvent;
+  function connectWebSocket() {
+    socket = new WebSocket("ws://localhost:8080/ws");
+
+    socket.onopen = () => {
+      console.log("✅ WebSocket opened");
+    };
+
+    socket.onmessage = processEvent;
+
+    socket.onclose = () => {
+      console.log("❌ WebSocket closed");
+    };
+
+    socket.onerror = (err) => {
+      console.error("💥 WebSocket error:", err);
+    };
+  }
+
+  window.addEventListener("load", () => {
+    connectWebSocket();
+  });
 
   function processEvent(event) {
-    if (event.data.type === 'active-sessions-response') {
-      renderActiveSessions(event.data)
+    const data = JSON.parse(event.data);
+
+    if (data.type === 'active-sessions-response') {
+      renderActiveSessions(data)
     }
 
-    console.log("Message from server:", event.data);
+    console.log("Message from server:", data);
   }
 
   function renderActiveSessions(data) {
     console.log(data);
   }
 
-  socket.onerror = (error) => {
-    console.error("WebSocket error:", error);
-  };
+  window.addEventListener("beforeunload", () => {
+    if (socket && socket.readyState === WebSocket.OPEN) {
+      socket.close();
+    }
+  });
 </script>
 
 <script>
@@ -279,6 +299,11 @@
   });
 
   function turnSnake(direction) {
+    if (!socket || socket.readyState !== WebSocket.OPEN) {
+      console.warn("WebSocket not ready, cannot send:", direction);
+      return;
+    }
+
     const message = {
       type: "move",
       direction: direction
